<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:weightSum="10"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/background_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="174dp"
        android:layout_height="174dp"
        android:layout_marginTop="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/login"
        android:textColor="@color/green_6"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:fontFamily="@font/nunito_sans_semibold"
        android:text="@string/wellcome"
        android:textColor="@color/green_6"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtPassLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:drawableEnd="@drawable/ic_eye_off"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Mật khẩu"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#7C838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserLogin" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtUserLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Tài khoản"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#7C838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/theme_btn_login_signup"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassLogin" />

    <TextView
        android:id="@+id/txtCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/newAccount"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_sans_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>