<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">
    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/background_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/signUp"
        android:textColor="@color/green_6"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/createAcount"
        android:textColor="@color/green_6"
        android:textSize="12sp"
        android:fontFamily="@font/nunito_sans_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtUserNameSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Tài khoản"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#7C838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtPassSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Mật khẩu"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#7C838383"
        android:drawableRight="@drawable/ic_eye_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUserNameSignUp" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtConfirmPassSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Xác nhận mật khẩu"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#7C838383"
        android:drawableRight="@drawable/ic_eye_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassSignUp" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtMailSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Địa chỉ Mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#7C838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFullNameSignUp" />

    <EditText
        android:theme="@style/themeEditext"
        android:id="@+id/edtFullNameSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="9dp"
        android:ems="10"
        android:fontFamily="@font/nunito_sans_semibold"
        android:hint="Họ và tên"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#7C838383"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmPassSignUp" />

    <TextView
        android:id="@+id/txtStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/loginAccount"
        android:fontFamily="@font/nunito_sans_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/theme_btn_login_signup"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMailSignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>